used-postgres-db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_with_jpa
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgresSQL Database Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-dev
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.application.name=EMPLOYEE-DATABASE
+
