--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,10 +1,10 @@
-name: Java CI with Maven
+name: Build and Test (Feature Branches)
 
 on:
   push:
-    branches: [ "**" ]
+    branches: [ "feature/**" ]
   pull_request:
-    branches: [ "**" ]
+    branches: [ "feature/**" ]
 
 jobs:
   build:
@@ -26,14 +26,5 @@ jobs:
       - name: Generate Coverage Report (Jacoco)
         run: mvn test jacoco:report
 
-      - name: SonarCloud Scan
-        # SonarCloud scan sirf main branch par chalega
-        if: github.ref == 'refs/heads/main'
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn -B sonar:sonar \
-          -Dsonar.projectKey=yadavanand7441_spring_boot_with_jpa \
-          -Dsonar.organization=yadavanand7441 \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${SONAR_TOKEN}
+      # ⚠️ Sonar aur coverage threshold yahan nahi honge
+      # Ye sirf dev/qa/prod pipelines me enforce honge
