--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -2,7 +2,7 @@ name: Dev Pipeline
 
 on:
   push:
-    branches: [ "dev", "feature/**" ]
+    branches: [ "dev" ]
   pull_request:
     branches: [ "dev" ]
 
