--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -9,22 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-      - name: Build with Maven
+      - name: Build & Unit Test
         run: mvn -B clean verify
-
       - name: Generate Coverage Report (Jacoco)
-        run: mvn test jacoco:report
-
-      # ⚠️ Sonar aur coverage threshold yahan nahi honge
-      # Ye sirf dev/qa/prod pipelines me enforce honge
+        run: mvn jacoco:report
