--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -11,23 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
       - name: Build & Unit Test
         run: mvn -B clean verify
-
-      - name: Coverage Check (Jacoco)
-        run: |
-          mvn test jacoco:report
-          COVERAGE=$(grep -Po '(?<=<counter type="LINE" missed=")[0-9]+(?=" covered=")[0-9]+' target/site/jacoco/jacoco.xml)
-          # yahan tum custom script likh sakte ho coverage threshold check ke liye
-
+      - name: Coverage Threshold Check (Jacoco)
+        run: mvn jacoco:check
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -36,7 +29,7 @@ jobs:
           -Dsonar.projectKey=yadavanand7441_spring_boot_with_jpa \
           -Dsonar.organization=yadavanand7441 \
           -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${SONAR_TOKEN}
-
+          -Dsonar.login=${SONAR_TOKEN} \
+          -Dsonar.qualitygate.wait=true
       - name: Deploy to Dev
         run: echo "Deploying to Dev environment..."
