--- a/.github/workflows/preprod-pipeline.yml
+++ b/.github/workflows/preprod-pipeline.yml
@@ -7,27 +7,20 @@ on:
     branches: [ "preprod" ]
 
 jobs:
-  build-test:
+  preprod-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
       - name: Build & Unit Test
         run: mvn -B clean verify
-
       - name: Coverage Threshold Check (Jacoco)
-        run: |
-          mvn test jacoco:report
-          # yahan tum custom script likh sakte ho coverage threshold enforce karne ke liye
-          # example: agar coverage < 80% hai to exit 1
-
+        run: mvn jacoco:check
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -38,6 +31,5 @@ jobs:
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${SONAR_TOKEN} \
           -Dsonar.qualitygate.wait=true
-
       - name: Deploy to Preprod
         run: echo "Deploying to Preprod environment..."
