--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -2,15 +2,16 @@ name: Prod Pipeline
 
 on:
   push:
-    branches: [ "main", "prod" ]
+    branches: [ "prod", "main" ]
   pull_request:
-    branches: [ "main", "prod" ]
+    branches: [ "prod", "main" ]
 
 jobs:
-  prod-checks:
+  build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -18,16 +19,25 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build & Test
+      - name: Build & Unit Test
         run: mvn -B clean verify
 
-      - name: SonarCloud + Quality Gate
+      - name: Coverage Threshold Check (Jacoco)
+        run: |
+          # Jacoco check plugin already configured in pom.xml
+          # This will fail if coverage < 80%
+          mvn jacoco:check
+
+      - name: SonarCloud Scan (Quality Gate enforced)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B sonar:sonar \
-          -Dsonar.qualitygate.wait=true \
-          -Dsonar.login=${SONAR_TOKEN}
+          -Dsonar.projectKey=yadavanand7441_spring_boot_with_jpa \
+          -Dsonar.organization=yadavanand7441 \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${SONAR_TOKEN} \
+          -Dsonar.qualitygate.wait=true
 
-      - name: Deploy to Prod
-        run: echo "Deploying to Production..."
+      - name: Deploy to Production
+        run: echo "Deploying to Production environment..."
