--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -19,11 +19,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build & Unit Test
+      - name: Build, Test & Coverage Check
         run: mvn -B clean verify
-
-      - name: Coverage Threshold Check (Jacoco)
-        run: mvn jacoco:check
 
       - name: SonarCloud Scan (Quality Gate enforced)
         env:
@@ -35,13 +32,6 @@ jobs:
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${SONAR_TOKEN} \
           -Dsonar.qualitygate.wait=true
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          files: target/site/jacoco/jacoco.xml
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
 
       - name: Deploy to Dev
         run: echo "Deploying to Dev environment..."
